<resources>
    <string name="app_name">Presença UFSC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Presença UFSC</string>
    <string name="nav_header_subtitle">martinho.m.souza@ufsc.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cadastrar_aluno">Cadastrar aluno</string>
    <string name="nome">Nome</string>
    <string name="matricula">Matricula</string>
    <string name="email">Email</string>
    <string name="confirmar">Confirmar</string>
    <string name="campo_email_vazio">Campo email vazio.</string>
    <string name="aluno_ja_cadastrado">Aluno já cadastrado. Por favor, entre com outra matricula.</string>
    <string name="digite_numero_matricula">Digite o número da matrícula.</string>
    <string name="campo_matricula_vazio">Campo matrícula vazio.</string>
    <string name="campo_nome_vazio">Campo nome vazio.</string>
    <string name="salvar">Salvar</string>
    <string name="salvo">Salvo.</string>
    <string name="title_activity_tela_disciplinas">Disciplinas</string>
    <string name="nome_disciplina">Nome da disciplina</string>
    <string name="cod_disciplina">Código da disciplina</string>
    <string name="nome_professor">Nome professor</string>
    <string name="aluno">Aluno</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="sobre">Sobre</string>
    <string name="aulas">Aulas</string>
    <string name="presenca">Presença</string>
    <string name="tutorialAlunoNaoCadastrado">Aluno ainda não cadastrado, por favor, efetue o cadastro na aba Aluno no menu lateral.</string>
    <string name="gpsDesligadoLigue">Conectando com o GPS. Tente novamente</string>
    <string name="senha_de_recupera_o">Senha de recuperação</string>
    <string name="confirmacao_senha">Confirmação de senha</string>
    <string name="recupera_o_de_conta">Recuperação de conta</string>
    <string name="digite_senha_recuperacao">Digite a senha de recuperação.</string>
    <string name="ok">Ok</string>
    <string name="escolher_cliente_senha">Guarde bem sua senha. Se quiser, envie a senha de recuperação como um backup.</string>
    <string name="digite_cod_instituicao">Digite o código da Instituição</string>
    <string name="digite_confirmacao_senha">Digite a confirmação da senha.</string>
    <string name="senhas_nao_batem">As senhas não batem.</string>
    <string name="nao_foi_possivel_salvar_o_aluno">Não foi possível salvar o aluno.</string>
    <string name="cod_instituicao">Código da Instituicao</string>
    <string name="codigo_vazio">Código vazio</string>
    <string name="cadastrado_com_sucesso">Cadastrado com sucesso.</string>
    <string name="cod_instituicao_vazio">Código de Instituição vazio</string>
    <string name="cod_disciplina_vazio">Código de disciplina vazio</string>
    <string name="disciplina_nao_encontrada_no_sistema">Disciplina não encontrada no sistema.</string>
    <string name="cadastrar_disciplina">Cadastrar Disciplina</string>
    <string name="erro_dados_nao_batem">Erro, dados não batem.</string>
    <string name="sucesso_sincronizando">Sucesso. Sincronizando...</string>
    <string name="instituicao_nao_encontrada_sistema">Instituição não encontrada no sistema.</string>
    <string name="sem_rede_sincronize_no_botao">Sem acesso a internet, sincronize com o botão superior direito da tela inicial quando estiver conectado para valizadação no sistema.</string>
    <string name="presenca_salva">Presença salva.</string>
    <string name="scan_cancelado">Scan cancelado</string>
    <string name="voce_tem_dados_pendentes">Você tem dados pendentes, por favor, sincronize com o sistema quando estiver conectado.</string>
    <string name="instrucoes_sincronizacao">Basta clicar no botão superior direito na tela incial.</string>
    <string name="sincronizacao_realizada_sucesso">Sincronização realizada com sucesso.</string>
    <string name="cadastre_disciplina_tutorial">Cadastre disciplinas no botão flutuante no canto inferior direito.</string>
    <string name="tutorial_disciplina">Nenhuma disciplina cadastrada ainda, para cadastrar, vá na aba \"Disciplina\" no menu Lateral.</string>


</resources>
